package com.labz.workoutx.services.auth


import android.content.Context
import androidx.credentials.CredentialManager
import androidx.credentials.CustomCredential
import androidx.credentials.GetCredentialRequest
import androidx.credentials.exceptions.GetCredentialCancellationException
import com.google.android.libraries.identity.googleid.GetGoogleIdOption
import com.google.android.libraries.identity.googleid.GoogleIdTokenCredential
import com.google.firebase.auth.AuthResult
import com.google.firebase.auth.FirebaseAuth
import com.google.firebase.auth.FirebaseAuthEmailException
import com.google.firebase.auth.FirebaseAuthInvalidCredentialsException
import com.google.firebase.auth.FirebaseUser
import com.google.firebase.auth.GoogleAuthProvider
import com.google.firebase.auth.UserProfileChangeRequest
import com.google.firebase.auth.ktx.auth
import com.google.firebase.ktx.Firebase
import com.labz.workoutx.models.User
import com.labz.workoutx.services.db.DBService
import com.labz.workoutx.throwables.LoginException
import com.labz.workoutx.throwables.SignupExceptions
import kotlinx.coroutines.Dispatchers
import kotlinx.coroutines.channels.awaitClose
import kotlinx.coroutines.flow.Flow
import kotlinx.coroutines.flow.callbackFlow
import kotlinx.coroutines.tasks.await
import kotlinx.coroutines.withContext
import java.security.MessageDigest
import java.util.UUID


class AccountServiceImpl : AccountService {

    override suspend fun authenticate(
        email: String,
        password: String,
        dbServiceRef: DBService,
        onResult: (Throwable?) -> Unit
    ) {
        try {
            Firebase.auth.signInWithEmailAndPassword(email, password).await()
            withContext(Dispatchers.IO) {
                dbServiceRef.getUserDataToUserObj()
            }
            onResult(null) // Success
        } catch (e: Exception) {
            val authError = when (e) {
                is FirebaseAuthInvalidCredentialsException -> {
                    // Invalid password or email format
                    // You can handle this error specifically, e.g., show a message to the user
                    LoginException.InvalidCredentials
                }

                else -> {
                    // Other authentication errors
                    LoginException.UnknownException(e)
                }
            }
            onResult(authError) // Error
        }
    }

    override suspend fun createAccountWithEmailPassword(
        email: String,
        password: String,
        name: String,
        onResult: (Throwable?) -> Unit
    ) {
        try {
            val auth = Firebase.auth
            val authResult = auth.createUserWithEmailAndPassword(email, password).await()
            val user = authResult.user

            val profileUpdates = UserProfileChangeRequest.Builder()
                .setDisplayName(name)
                .build()

            user?.updateProfile(profileUpdates)?.await()

            onResult(null) // Success
        } catch (e: Exception) {
            val accCreationError = when (e) {
                is FirebaseAuthEmailException -> {
                    SignupExceptions.EmailAlreadyExistingException
                }

                else -> {
                    SignupExceptions.UnknownException(e)
                }
            }
            onResult(accCreationError) // Error
        }
    }

    override suspend fun getCurrentUser(): FirebaseUser? {
        return Firebase.auth.currentUser
    }

    override suspend fun sendPasswordResetEmail(emailAddress: String) {
        Firebase.auth.sendPasswordResetEmail(emailAddress).await()
    }

    override suspend fun signInWithGoogle(
        context: Context,
        dbServiceRef: DBService
    ): Flow<Result<AuthResult>> {
        val firebaseAuth = FirebaseAuth.getInstance()
        return callbackFlow {
            try {
                // Initialize Credential Manager
                val credentialManager: CredentialManager = CredentialManager.create(context)

                // Generate a nonce (a random number used once)
                val ranNonce: String = UUID.randomUUID().toString()
                val bytes: ByteArray = ranNonce.toByteArray()
                val md: MessageDigest = MessageDigest.getInstance("SHA-256")
                val digest: ByteArray = md.digest(bytes)
                val hashedNonce: String = digest.fold("") { str, it -> str + "%02x".format(it) }

                // Set up Google ID option
                val googleIdOption: GetGoogleIdOption = GetGoogleIdOption.Builder()
                    .setFilterByAuthorizedAccounts(false)
                    .setServerClientId("554320831953-6sgv2pmgcisa6kv84vhgcu87sac8v04r.apps.googleusercontent.com")  // Web client ID from firebase console
                    .setNonce(hashedNonce)
                    .build()

                // Request credentials
                val request: GetCredentialRequest = GetCredentialRequest.Builder()
                    .addCredentialOption(googleIdOption)
                    .build()

                // Get the credential result
                val result = credentialManager.getCredential(context, request)
                val credential = result.credential

                // Check if the received credential is a valid Google ID Token
                if (credential is CustomCredential && credential.type == GoogleIdTokenCredential.TYPE_GOOGLE_ID_TOKEN_CREDENTIAL) {
                    val googleIdTokenCredential =
                        GoogleIdTokenCredential.createFrom(credential.data)
                    val authCredential =
                        GoogleAuthProvider.getCredential(googleIdTokenCredential.idToken, null)
                    val authResult = firebaseAuth.signInWithCredential(authCredential).await()
                    withContext(Dispatchers.IO) {
                        dbServiceRef.getUserDataToUserObj()
                    }
                    trySend(Result.success(authResult))
                } else {
                    throw RuntimeException("Received an invalid credential type")
                }
            } catch (_: GetCredentialCancellationException) {
                trySend(Result.failure(Exception("Sign-in was canceled. Please try again.")))

            } catch (e: Exception) {
                trySend(Result.failure(e))
            }
            awaitClose { }
        }
    }

    override suspend fun signOut(onResult: (Throwable?) -> Unit) {
        try {
            Firebase.auth.signOut()
            User.userLoggedOut()
            onResult(null) // Success
        } catch (e: Exception) {
            onResult(e) // Error
        }
    }

    override fun isUserLoggedIn(): Boolean {
        return Firebase.auth.currentUser != null
    }
}